--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@ website/node_modules
 
 website/vendor
 
+Dockerfile
+devcontainer.json
+
 # Test exclusions
 !command/test-fixtures/**/*.tfstate
 !command/test-fixtures/**/.terraform/
